bk_ida/gccida/c0/expand_inc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inc/src/expmed.c:2343:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inc/src/expmed.c:2343:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target), 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inc/src/obj/expmed.o] Error 1
